# Space-Invaders

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: Bullet.cpp.6DE1BAC80136619F.idx  Bullet.h.199545A2BEFEAF7A.idx  Entity.cpp.463E86B00A9C9127.idx  Entity.h.161403953C788199.idx  Game.cpp.2D57D8E3EBFB5812.idx  Game.cpp.515144F557A8070D.idx  Game.h.732AFC7EA4DA0C1C.idx  Game.h.9EC5681C1000D10E.idx  IMG.c.4E5B0B3AF24C4205.idx  IMG_WIC.c.99B859C288C7E4C1.idx  IMG_avif.c.50C346423D9C0715.idx  IMG_bmp.c.F70621EC41EFF498.idx  IMG_gif.c.06178F77CBBC2DB4.idx  IMG_jpg.c.46574CB46F6A29F1.idx  IMG_jxl.c.16D385FEA8BBB29D.idx  IMG_lbm.c.A4C91D59E0DDD654.idx  IMG_pcx.c.F5B07D7E58D4224F.idx  IMG_png.c.1E890E4DA6BA3566.idx  IMG_pnm.c.4F07CE98D3FF2823.idx  IMG_qoi.c.6A3F4EBC2FF0072F.idx  IMG_stb.c.D383ADAC27C7FD23.idx  IMG_svg.c.A3B32186DBD2E67B.idx  IMG_tga.c.6685EADF944CF416.idx  IMG_tif.c.E1F96CCCA85C8A0D.idx  IMG_webp.c.F0C7D0794E40531B.idx  IMG_xcf.c.3CCD4342FE8CF7B6.idx  IMG_xpm.c.64162215B9F6D57F.idx  IMG_xv.c.384FBE6928A39A49.idx  Player.cpp.0E51D1D4543154CE.idx  Player.h.4975938A2F9A5E99.idx  SDL.c.EEB2AD1EB4D7A2F1.idx  SDL.h.C21FAE1421D241CA.idx  SDL_RLEaccel.c.ECC135A50C5D1981.idx  SDL_RLEaccel_c.h.09B12367431BFAC8.idx  SDL_alsa_audio.c.BD4363D322662857.idx  SDL_alsa_audio.h.FB51FD0470F9A75A.idx  SDL_appid.c.93397FDD52540444.idx  SDL_appid.h.084D881BD04312FB.idx  SDL_assert.c.DB977D1703F9B8A2.idx  SDL_assert.h.243ABAC2E45BC8D2.idx  (+660 more)
src/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h  main-test.cpp  main.cpp
